Adicionando um exemplo usando fiber como servidor http.
